Issue #44 Fixed horizontal scrolling on portfolio page

--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -210,11 +210,12 @@ section h2.section-heading {
 }
 
 section h3.section-subheading {
-    margin-bottom: $spacing-unit;
+    margin-bottom: calc(#{$spacing-unit} * 2);
     text-transform: none;
     font-family: $base-display-font;
     font-size: 16px;
     font-weight: $weight-light;
+    margin-top: 0;
 }
 
 @media(min-width:768px) {
@@ -231,6 +232,7 @@ section h3.section-subheading {
 #portfolio .portfolio-item {
     right: 0;
     margin: 0 0 15px;
+    padding-left: 0;
 }
 
 #portfolio .portfolio-item .portfolio-link {
